# clipboard_manager

./: README.md  main.py  new.py  newt.py  pyproject.toml  test.py
