[project]
name = "clipboard-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyGObject==3.42.2",
    "pycairo==1.23.0",
    "python-xlib>=0.31; sys_platform == 'linux'",
    "evdev>=1.4.0; sys_platform == 'linux'",
    "dbus-python; sys_platform == 'linux'"
]